# internal/features/group/dto.go
@@ -1,0 +1,9 @@
+package group
+
+type CreateGroupRequest struct {
+	Name string `json:"name" validate:"required,min=1,max=100"`
+}
+
+type JoinGroupRequest struct {
+	InviteCode string `json:"invite_code" validate:"required"`
+}
